--- a/package.json
+++ b/package.json
@@ -12,9 +12,15 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.9.5",
+    "@prisma/client": "^5.7.0",
     "@types/express": "^4.17.21",
     "express": "^4.18.2",
-    "tsc-watch": "^6.0.4",
+    "tsc-watch": "^6.0.4"
+  },
+  "devDependencies": {
+    "@types/node": "^20.10.4",
+    "prisma": "^5.7.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
 }
