--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@apollo/server": "^4.9.5",
     "@prisma/client": "^5.7.0",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "tsc-watch": "^6.0.4"
   },
   "devDependencies": {
